Fixes #14411 - Double tap to edit on mobile bug solved

--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -417,6 +417,7 @@ table {
     margin: 0.1em;
     vertical-align: middle;
     text-shadow: 0 1px 0 #fff;
+    touch-action: manipulation;
   }
 }
 
